# ps

./: .pre-commit-config.yaml  Cargo.toml
euler/: Cargo.toml
euler/examples/: 1.rs  10.rs  11.rs  12.rs  2.rs  3.rs  4.rs  5.rs  6.rs  7.rs  8.rs  9.rs
euler/src/: lib.rs
src/: lib.rs
src/math/: diophantine.rs  fourier.rs  mod.rs  modular.rs  num.rs  prime.rs
